# Module_28_threads_task_2

./: CMakeLists.txt
src/: main.cpp
